browser/themes/shared/customizableui/panelUIOverlay.inc.css
/* ... */
#
PanelUI
-
popup
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
overflow
:
hidden
;
box
-
shadow
:
none
;
}
#
PanelUI
-
popup
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
.
cui
-
widget
-
panel
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
>
.
popup
-
internal
-
box
{
padding
:
0
;
}
.
panelUI
-
grid
.
toolbarbutton
-
menubutton
-
button
>
.
toolbarbutton
-
multiline
-
text
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
multiline
-
text
{
margin
:
2px
0
0
;
text
-
align
:
center
;
-
moz
-
hyphens
:
auto
;
}
#
wrapper
-
edit
-
controls
:
-
moz
-
any
(
[
place
=
"
palette
"
]
[
place
=
"
panel
"
]
)
>
#
edit
-
controls
#
wrapper
-
zoom
-
controls
:
-
moz
-
any
(
[
place
=
"
palette
"
]
[
place
=
"
panel
"
]
)
>
#
zoom
-
controls
{
-
moz
-
margin
-
start
:
0
;
}
#
PanelUI
-
contents
.
panel
-
mainview
:
not
(
[
panelid
=
"
PanelUI
-
popup
"
]
)
{
max
-
width
:
menuPanelWidth
;
}
panelview
:
not
(
[
mainview
]
)
.
toolbarbutton
-
text
.
cui
-
widget
-
panel
toolbarbutton
>
.
toolbarbutton
-
text
{
text
-
align
:
start
;
-
moz
-
padding
-
start
:
8px
;
display
:
-
moz
-
box
;
}
.
cui
-
widget
-
panel
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
padding
:
4px
0
;
}
.
cui
-
widget
-
panel
.
cui
-
widget
-
panelWithFooter
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
padding
-
bottom
:
0
;
}
#
PanelUI
-
contents
{
display
:
block
;
flex
:
auto
;
margin
-
left
:
auto
;
margin
-
right
:
auto
;
padding
:
.
5em
0
;
max
-
width
:
menuPanelWidth
;
}
#
PanelUI
-
contents
-
scroller
{
overflow
-
y
:
auto
;
overflow
-
x
:
hidden
;
width
:
menuPanelWidth
;
padding
-
left
:
5px
;
padding
-
right
:
5px
;
flex
:
auto
;
}
#
edit
-
controls
inAnyPanel
>
toolbarbutton
>
.
toolbarbutton
-
icon
#
zoom
-
controls
inAnyPanel
>
toolbarbutton
>
.
toolbarbutton
-
icon
{
min
-
width
:
0
;
min
-
height
:
0
;
margin
:
0
;
}
toolbaritem
[
cui
-
areatype
=
"
menu
-
panel
"
]
[
sdkstylewidget
=
"
true
"
]
:
not
(
.
panel
-
wide
-
item
)
.
panelUI
-
grid
.
toolbarbutton
-
1
.
customization
-
palette
.
toolbarbutton
-
1
.
panel
-
customization
-
placeholder
-
child
{
-
moz
-
appearance
:
none
;
-
moz
-
box
-
orient
:
vertical
;
min
-
width
:
calc
(
menuPanelWidth
/
3
)
;
max
-
width
:
calc
(
menuPanelWidth
/
3
)
;
height
:
calc
(
40px
+
2
.
4em
)
;
max
-
height
:
calc
(
40px
+
2
.
4em
)
;
}
.
panel
-
customization
-
placeholder
-
child
{
margin
:
6px
0
0
;
padding
:
2px
6px
;
border
:
1px
solid
transparent
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
menubutton
-
dropmarker
{
-
moz
-
box
-
align
:
center
;
width
:
16px
;
-
moz
-
margin
-
start
:
-
16px
;
height
:
40px
;
max
-
height
:
40px
;
padding
:
0
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
:
not
(
[
buttonover
]
)
buttonStateHover
>
.
toolbarbutton
-
menubutton
-
dropmarker
{
background
-
color
:
hsla
(
210
4
%
10
%
.
1
)
!
important
;
border
-
radius
:
0
0
0
2px
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
:
not
(
[
buttonover
]
)
buttonStateHover
>
.
toolbarbutton
-
menubutton
-
dropmarker
:
-
moz
-
locale
-
dir
(
rtl
)
{
border
-
radius
:
0
0
2px
0
;
}
.
panel
-
combined
-
button
[
disabled
]
>
.
toolbarbutton
-
icon
{
opacity
:
.
5
;
}
toolbaritem
[
cui
-
areatype
=
"
menu
-
panel
"
]
[
sdkstylewidget
=
"
true
"
]
{
width
:
calc
(
menuPanelWidth
/
3
)
;
margin
:
0
!
important
;
}
toolbaritem
[
cui
-
areatype
=
"
menu
-
panel
"
]
[
sdkstylewidget
=
"
true
"
]
:
not
(
.
panel
-
wide
-
widget
)
{
-
moz
-
box
-
align
:
center
;
-
moz
-
box
-
pack
:
center
;
}
toolbaritem
[
cui
-
areatype
=
"
menu
-
panel
"
]
[
sdkstylewidget
=
"
true
"
]
>
iframe
{
margin
:
4px
auto
;
}
toolbaritem
[
cui
-
areatype
=
"
menu
-
panel
"
]
[
sdkstylewidget
=
"
true
"
]
:
not
(
.
panel
-
wide
-
item
)
>
.
toolbarbutton
-
text
{
text
-
align
:
center
;
}
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
menubutton
-
button
>
.
toolbarbutton
-
icon
.
panelUI
-
grid
.
toolbarbutton
-
1
>
.
toolbarbutton
-
icon
.
customization
-
palette
.
toolbarbutton
-
1
>
.
toolbarbutton
-
menubutton
-
button
>
.
toolbarbutton
-
icon
.
customization
-
palette
.
toolbarbutton
-
1
>
.
toolbarbutton
-
icon
.
panelUI
-
grid
#
bookmarks
-
toolbar
-
placeholder
>
.
toolbarbutton
-
icon
.
customization
-
palette
#
bookmarks
-
toolbar
-
placeholder
>
.
toolbarbutton
-
icon
.
panel
-
customization
-
placeholder
-
child
>
.
toolbarbutton
-
icon
{
min
-
width
:
32px
;
min
-
height
:
32px
;
margin
:
4px
;
}
toolbarpaletteitem
[
place
=
"
palette
"
]
>
toolbaritem
>
toolbarbutton
{
-
moz
-
box
-
flex
:
1
;
}
#
edit
-
controls
inAnyPanel
>
#
copy
-
button
#
zoom
-
controls
inAnyPanel
>
#
zoom
-
reset
-
button
{
border
-
left
:
none
;
border
-
right
:
none
;
border
-
radius
:
0
;
}
#
zoom
-
in
-
button
>
.
toolbarbutton
-
text
#
zoom
-
out
-
button
>
.
toolbarbutton
-
text
#
zoom
-
reset
-
button
>
.
toolbarbutton
-
icon
{
display
:
none
;
}
#
PanelUI
-
footer
{
display
:
flex
;
flex
-
direction
:
column
;
background
-
color
:
rgba
(
0
0
0
0
.
05
)
;
box
-
shadow
:
0
-
1px
0
rgba
(
0
0
0
.
15
)
;
padding
:
0
;
margin
:
0
;
}
#
PanelUI
-
footer
-
inner
{
display
:
flex
;
box
-
shadow
:
0
-
1px
0
rgba
(
0
0
0
.
15
)
;
}
#
PanelUI
-
footer
-
inner
>
toolbarseparator
{
border
:
0
;
border
-
left
:
1px
solid
rgba
(
0
0
0
0
.
1
)
;
margin
:
7px
0
7px
;
}
#
PanelUI
-
footer
-
inner
:
hover
>
toolbarseparator
{
margin
:
0
;
}
#
PanelUI
-
help
#
PanelUI
-
fxa
-
status
#
PanelUI
-
customize
#
PanelUI
-
quit
{
margin
:
0
;
padding
:
10px
0
;
min
-
height
:
2em
;
-
moz
-
appearance
:
none
;
box
-
shadow
:
none
;
background
-
image
:
none
;
border
:
1px
solid
transparent
;
border
-
bottom
-
style
:
none
;
border
-
radius
:
0
;
transition
:
background
-
color
;
-
moz
-
box
-
orient
:
horizontal
;
}
#
PanelUI
-
fxa
-
status
{
border
-
bottom
-
style
:
solid
;
}
#
PanelUI
-
fxa
-
status
>
.
toolbarbutton
-
text
{
width
:
0
;
}
#
PanelUI
-
fxa
-
status
[
signedin
]
{
font
-
weight
:
bold
;
}
#
PanelUI
-
help
#
PanelUI
-
quit
{
min
-
width
:
46px
;
}
/* ... */

