Bug 897496 - [Australis] Fade out and cut off third-to-nth line of toolbarbutton labels in menupane. r=Gijs ui-r=mmaslaney
UltraBlame original commit: ea246bfdd26247918169c67b65e7cc357bab41cd

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -912,12 +912,6 @@ multiline
 -
 text
 {
-margin
-:
-2px
-0
-0
-;
 text
 -
 align
@@ -930,6 +924,82 @@ moz
 hyphens
 :
 auto
+;
+mask
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+content
+/
+browser
+.
+xul
+#
+menuPanelButtonTextFadeOutMask
+)
+;
+min
+-
+height
+:
+3
+.
+5em
+;
+}
+.
+panelUI
+-
+grid
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+multiline
+-
+text
+{
+margin
+:
+2px
+0
+0
+;
+}
+.
+panelUI
+-
+grid
+.
+toolbarbutton
+-
+menubutton
+-
+button
+>
+.
+toolbarbutton
+-
+multiline
+-
+text
+{
+margin
+:
+-
+1px
+0
+0
 ;
 }
 #
@@ -1295,14 +1365,6 @@ toolbarbutton
 -
 1
 .
-customization
--
-palette
-.
-toolbarbutton
--
-1
-.
 panel
 -
 customization
@@ -1327,19 +1389,6 @@ orient
 :
 vertical
 ;
-min
--
-width
-:
-calc
-(
-menuPanelWidth
-/
-3
-)
-;
-max
--
 width
 :
 calc
@@ -1355,23 +1404,184 @@ calc
 (
 40px
 +
-2
-.
 4em
 )
 ;
-max
+}
+.
+customization
 -
+palette
+.
+toolbarbutton
+-
+1
+{
+-
+moz
+-
+appearance
+:
+none
+;
+-
+moz
+-
+box
+-
+orient
+:
+vertical
+;
+}
+.
+panelUI
+-
+grid
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+{
+-
+moz
+-
+appearance
+:
+none
+;
+-
+moz
+-
+box
+-
+orient
+:
+vertical
+;
+width
+:
+calc
+(
+menuPanelWidth
+/
+3
+-
+2px
+)
+;
 height
 :
 calc
 (
-40px
+38px
 +
-2
-.
 4em
 )
+;
+margin
+-
+top
+:
+3px
+;
+border
+:
+0
+;
+}
+toolbaritem
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+[
+sdkstylewidget
+=
+"
+true
+"
+]
+:
+not
+(
+.
+panel
+-
+wide
+-
+item
+)
+.
+panelUI
+-
+grid
+.
+toolbarbutton
+-
+1
+:
+not
+(
+[
+type
+=
+"
+menu
+-
+button
+"
+]
+)
+.
+panelUI
+-
+grid
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+.
+customization
+-
+palette
+.
+toolbarbutton
+-
+1
+.
+panel
+-
+customization
+-
+placeholder
+-
+child
+{
+overflow
+:
+hidden
 ;
 }
 .
@@ -1444,11 +1654,11 @@ height
 :
 40px
 ;
-max
+margin
 -
-height
+bottom
 :
-40px
+4em
 ;
 padding
 :
@@ -1851,6 +2061,14 @@ height
 margin
 :
 4px
+calc
+(
+menuPanelWidth
+/
+6
+-
+23px
+)
 ;
 }
 toolbarpaletteitem
@@ -3038,8 +3256,9 @@ radius
 2px
 ;
 border
+-
+style
 :
-1px
 solid
 ;
 border
@@ -3072,6 +3291,45 @@ transition
 duration
 :
 150ms
+;
+}
+panelview
+.
+toolbarbutton
+-
+1
+.
+subviewbutton
+.
+widget
+-
+overflow
+-
+list
+.
+toolbarbutton
+-
+1
+#
+edit
+-
+controls
+inAnyPanel
+>
+toolbarbutton
+#
+zoom
+-
+controls
+inAnyPanel
+>
+toolbarbutton
+{
+border
+-
+width
+:
+1px
 ;
 }
 .
@@ -3312,27 +3570,6 @@ margin
 top
 :
 6px
-;
-}
-.
-panelUI
--
-grid
-.
-toolbarbutton
--
-1
->
-.
-toolbarbutton
--
-menubutton
--
-button
-{
-border
-:
-0
 ;
 }
 panelview
@@ -3986,12 +4223,10 @@ palette
 "
 ]
 >
-#
-bookmarks
+.
+toolbarbutton
 -
-menu
--
-button
+1
 >
 .
 toolbarbutton
